过滤部分启动期异常